--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -1,14 +1,14 @@
 <div class="navigation-tabs" ui-hot-keys>
   <div class="nav-tabs-wrap">
-	<div class="nav-tabs-scroll-l"><a href="#"><i class="icon-chevron-left"></i></a></div>
-	<div class="nav-tabs-scroll-r"><a href="#"><i class="icon-chevron-right"></i></a></div>
+	<div class="nav-tabs-scroll-l"><a href="#"><i class="fa fa-chevron-left"></i></a></div>
+	<div class="nav-tabs-scroll-r"><a href="#"><i class="fa fa-chevron-right"></i></a></div>
 	<div class="nav-tabs-strip">
 	<ul class="nav nav-tabs nav-tabs-main nav-tabs-scrollable nav-tabs-closable">
 	 <li ng-repeat="tab in navTabs" ng-class="{ active: tab.selected, inactive: !tab.selected, dirty: tabDirty(tab) }">
 	   <a href="" ng-click="navClick(tab)">
 	     <img class="prefix-icon" ng-show="tab.icon" ng-src="{{tab.icon}}"><span ui-tab-popover>{{tabTitle(tab)}}</span>
 	   </a>
-	   <i ng-show="canCloseTab(tab)" class="icon-remove" ng-click="closeTab(tab)"></i>
+	   <i ng-show="canCloseTab(tab)" class="fa fa-times" ng-click="closeTab(tab)"></i>
 	 </li>
 	</ul>
 	</div>
