--- a/axelor-web/src/main/webapp/partials/views/calendar.html
+++ b/axelor-web/src/main/webapp/partials/views/calendar.html
@@ -15,8 +15,8 @@
   	      <span ng-bind-html-unsafe="pagerText()"></span>
   	      <button class="btn" ng-click="onToday()"><span x-translate>Today</span></button>
   	      <div class="btn-group">
-  	        <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()"><i class="icon-chevron-left"></i></button>
-  	        <button class="btn" ng-disabled="!canNext()" ng-click="onNext()"><i class="icon-chevron-right"></i></button>
+  	        <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()"><i class="fa fa-chevron-left"></i></button>
+  	        <button class="btn" ng-disabled="!canNext()" ng-click="onNext()"><i class="fa fa-chevron-right"></i></button>
   	      </div>
   	    </div>
       </div>
