--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -4,22 +4,22 @@
       <div class="container">
         <div class="btn-group">
           <button class="btn" ng-click="onNew()" ng-if="canNew()" title="{{ 'New' | t}}">
-            <i class="icon icon-file"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
+            <i class="fa fa-file"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
           </button>
           <button class="btn" ng-click="onEdit()" ng-if="!isEditable() && canEdit()" title="{{ 'Edit' | t}}">
-            <i class="icon icon-pencil"></i> <span ng-hide="tbTitleHide" x-translate>Edit</span>
+            <i class="fa fa-pencil"></i> <span ng-hide="tbTitleHide" x-translate>Edit</span>
           </button>
           <button class="btn" ng-click="onSave()" ng-if="isEditable() && (canEdit() || canSave())"  title="{{ 'Save' | t}}">
-            <i class="icon icon-save"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
+            <i class="fa fa-floppy-o"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
           </button>
           <button class="btn" ng-click="onCancel()" ng-if="hasButton('cancel') && canCancel()" title="{{ 'Cancel' | t}}">
-            <i class="icon icon-ban-circle"></i> <span ng-hide="tbTitleHide" x-translate>Cancel</span>
+            <i class="fa fa-ban"></i> <span ng-hide="tbTitleHide" x-translate>Cancel</span>
           </button>
           <button class="btn" ng-click="onBack()" ng-if="hasButton('back') && !canCancel()" ng-disabled="!canBack()" title="{{ 'Back' | t}}">
-            <i class="icon icon-reply"></i> <span ng-hide="tbTitleHide" x-translate>Back</span>
+            <i class="fa fa-reply"></i> <span ng-hide="tbTitleHide" x-translate>Back</span>
           </button>
           <button class="btn" ng-disabled="!canShowAttachments()" ng-click="onShowAttachments()" ng-class="{'has-attachments': record.$attachments}">
-          	<i class="icon icon-pushpin"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub>
+          	<i class="fa fa-thumb-tack"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub>
           </button>
         </div>
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
