--- a/axelor-web/src/main/webapp/partials/views/tree.html
+++ b/axelor-web/src/main/webapp/partials/views/tree.html
@@ -7,14 +7,14 @@
           <span class="record-pager-text">{{pagerText()}}</span>
           <div class="btn-group">
             <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()">
-              <i class="icon-chevron-left"></i>
+              <i class="fa fa-chevron-left"></i>
             </button>
             <button class="btn" ng-disabled="!canNext()" ng-click="onNext()">
-              <i class="icon-chevron-right"></i>
+              <i class="fa fa-chevron-right"></i>
             </button>
           </div>
           <button class="btn" ng-click="onRefresh()">
-            <i class="icon icon-refresh"></i>
+            <i class="fa fa-refresh"></i>
           </button>
         </div>
       </div>
