--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -48,6 +48,8 @@
 
 @import url('../lib/d3/nv/nv.d3.css');
 
+@import url('../lib/codemirror/codemirror.min.css');
+
 @import url('scrollbar.css');
 @import url('main.css');
 @import url('print.css') print;
