--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -490,7 +490,15 @@ td.form-item > * {
 }
 
 .form-item div.code-editor {
+	min-height: 50px;
+	height: 280px;
+}
+
+.form-item div.code-editor .CodeMirror {
 	border: 1px solid #DDD;
+}
+.form-item div.code-editor .CodeMirror-scroll {
+	height: calc(100% + 30px);
 }
 
 .form-item span.error {
