--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="btn-group">
           <button class="btn" ng-click="onNew()" ng-if="hasButton('new')" ng-disabled="canSave()" title="{{ 'New' | t}}">
-            <i class="fa fa-file"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
+            <i class="fa fa-plus"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
           </button>
           <button class="btn" ng-click="onEdit()" ng-if="hasButton('edit')" ng-disabled="!canEdit()" title="{{ 'Edit' | t}}">
             <i class="fa fa-pencil"></i> <span ng-hide="tbTitleHide" x-translate>Edit</span>
@@ -14,7 +14,7 @@
             <i class="fa fa-floppy-o"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
           </button>
           <button class="btn" ng-click="onDelete()" ng-if="hasButton('delete')" ng-disabled="!canDelete()" title="{{ 'Delete' | t}}">
-            <i class="fa fa-times"></i> <span ng-hide="tbTitleHide" x-translate>Delete</span>
+            <i class="fa fa-trash-o"></i> <span ng-hide="tbTitleHide" x-translate>Delete</span>
           </button>
         </div>
         <div ui-filter-box x-handler="this"></div>
