--- a/axelor-core/src/main/resources/views/Meta.xml
+++ b/axelor-core/src/main/resources/views/Meta.xml
@@ -11,7 +11,7 @@
     <option value="search">Search</option>
     <option value="portal">Portal</option>
     <option value="calendar">Calendar</option>
-    <option value="searchfilters">Filters</option>
+    <option value="search-filters">Filters</option>
   </selection>
 
   <selection name="action.type.selection">
