--- a/axelor-core/src/main/resources/views/Meta.xml
+++ b/axelor-core/src/main/resources/views/Meta.xml
@@ -87,6 +87,13 @@
     <field name="priority" width="75"/>
   </grid>
   
+  <grid title="All Charts" name="meta-view-chart-grid" model="com.axelor.meta.db.MetaView" orderBy="priority,name">
+    <field name="name"/>
+    <field name="title"/>
+    <field name="module"/>
+    <field name="priority" width="75"/>
+  </grid>
+  
   <form name="meta-view-form" title="View" model="com.axelor.meta.db.MetaView" cols="2" colWidths="*,250"
     onSave="action-view-validate,com.axelor.meta.web.MetaController:clearCache">
     <group title="View Details" cols="4">
