--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -495,6 +495,10 @@ td.form-item > * {
 	width: 100%;
 }
 
+.form-item div.code-editor.readonly .CodeMirror-focused .CodeMirror-cursor {
+	visibility: hidden;
+} 
+
 .form-item span.error {
 	color: #953B39;
 }
