--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -23,7 +23,7 @@
 
 .view-container .form-view > div:last-child {
 	position: absolute;
-	top: 46px;
+	top: 42px;
 	bottom: 0; left: 0; right: 0;
 	overflow: auto;
 }
@@ -396,7 +396,7 @@ td.form-item > * {
 }
 
 .form-item .form-item-group > legend i.fa {
-	color: #CCC;
+	color: #ccc;
 	height: 15px;
 	margin-right: 4px;
 	vertical-align: middle;
@@ -410,13 +410,14 @@ td.form-item > * {
 }
 
 .form-item .form-item-group > legend {
-	
+
 	width: auto;
 	margin: 0;
 	margin-left: 10px;
 	padding: 0 4px;
 		
 	font-size: inherit;
+	font-weight: bold;
 	line-height: 1.4em;
 	
 	border: none;
@@ -516,6 +517,15 @@ td.form-item > * {
 	-webkit-user-select: none;
 	   -moz-user-select: none;
 	        user-select: none;
+}
+
+.form-item .separator-item span {
+	font-weight: bold;
+}
+
+.form-item .separator-item hr {
+	margin: 4px 0;
+	border-top-color: #c1c1c1;
 }
 
 .form-item .ui-spinner {
@@ -679,7 +689,7 @@ table.field-details .help-text hr {
 }
 
 .subtotal-total {
-	border-top: 1px solid #ccc;
+	border-top: 1px solid #c1c1c1;
 	font-size: 18px;
 	padding-top: 6px !important;
 }
@@ -781,7 +791,7 @@ table.field-details .help-text hr {
 }
 
 .tag-select {
-	border: 1px solid #cccccc;
+	border: 1px solid #c1c1c1;
 	border-radius: 4px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	transition: border linear .2s, box-shadow linear .2s;
@@ -1075,7 +1085,7 @@ table.field-details .help-text hr {
 }
 
 .filter-menu .filter-form .links .divider {
-	color: #ccc;
+	color: #c1c1c1;
 	padding: 0 5px;
 }
 
