--- a/axelor-core/src/main/resources/views/Meta.xml
+++ b/axelor-core/src/main/resources/views/Meta.xml
@@ -79,6 +79,9 @@
   </selection>
 
   <grid title="All Views" name="meta-view-grid" model="com.axelor.meta.db.MetaView" orderBy="priority,name">
+    <toolbar>
+        <button name="restoreAll" title="Restore all" prompt="All the customizations will be lost. Are you sure ?" onClick="action-meta-restore-all"/>
+    </toolbar>
     <field name="name"/>
     <field name="title"/>
     <field name="type" selection="view.type.selection"/>
@@ -94,7 +97,7 @@
     <field name="priority" width="75"/>
   </grid>
   
-  <form name="meta-view-form" title="View" model="com.axelor.meta.db.MetaView" cols="2" colWidths="*,250"
+  <form name="meta-view-form" title="View" model="com.axelor.meta.db.MetaView" cols="1"
     onSave="action-view-validate,com.axelor.meta.web.MetaController:clearCache">
     <group title="View Details" cols="4">
         <field name="name"/>
@@ -105,12 +108,7 @@
         <field name="module"/>
         <field name="groups" widget="TagSelect" x-create="code,name"/>
     </group>
-    <group title="Actions" cols="1">
-        <button name="validate" title="Validate" onClick="action-view-validate"/>
-        <button name="restore" title="Restore" prompt="All the customizations made for this view will be lost. Are you sure ?" onClick="save,action-meta-restore-single"/>
-        <button name="restoreAll" title="Restore All" prompt="All the customizations will be lost. Are you sure ?" onClick="action-meta-restore-all"/>
-    </group>
-    <field name="xml" showTitle="false" colSpan="2" widget="CodeEditor" x-syntax="xml" x-height="500"/>
+    <field name="xml" showTitle="false" widget="CodeEditor" x-syntax="xml" x-height="500"/>
 </form>
 
   <grid title="All Actions" name="meta-action-grid" model="com.axelor.meta.db.MetaAction">
