--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -350,7 +350,7 @@
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
-.slick-cell > a {
+.slick-cell:not(.button) > a {
 	line-height: 24px;
 	color: #0088cc;
 }
