--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -146,6 +146,43 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 	border-radius: 0px 0px 4px 4px;
 }
 
+.blocker-overlay {
+	
+}
+
+.blocker-spinner {
+	display: none;
+	position: absolute;
+	top: calc(50% - 23px);
+	left: calc(50% - 75px);
+
+	width: 150px;
+	padding: 12px;
+	
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	background-color: #333;
+	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+}
+
+.blocker-spinner,
+.blocker-spinner i {
+	color: #fff;
+	font-weight: bold;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.blocker-spinner i {
+	font-size: 24px;
+	vertical-align: middle;
+	margin-top: -2px;
+	margin-right: 4px;
+}
+
+.blocker-spinner.visible {
+	display: inline-block;
+}
+
 .spacer {
 	height: 1em;
 }
