Fixed canView/canEdit related issues (#1961).

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -599,6 +599,7 @@ form.readonly .form-item-container:hover .hot-edit-icon {
 	display: inline;
 }
 
+.no-edit .hot-edit-icon,
 [x-readonly="true"] .hot-edit-icon {
 	display: none !important;
 }
