--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -156,7 +156,7 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 	top: calc(50% - 23px);
 	left: calc(50% - 75px);
 
-	width: 150px;
+	display: inline-block;
 	padding: 12px;
 	
 	border: 1px solid rgba(0, 0, 0, 0.2);
