--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -147,40 +147,41 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 }
 
 .blocker-overlay {
-	
+	opacity: 0;
 }
 
-.blocker-spinner {
+.blocker-overlay.wait {
+	opacity: 1;
+	background: rgba(0, 0, 0, 0.8);
+	transition: opacity ease 0.4s;
+}
+
+.blocker-overlay .blocker-wait {
 	display: none;
 	position: absolute;
-	top: calc(50% - 23px);
-	left: calc(50% - 75px);
-
-	display: inline-block;
-	padding: 12px;
+	top: 50%;
+	top: calc(50% - 30px);
+	width: 100%;
 	
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-	background-color: #333;
-	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+	text-align: center;
+	font-size: 22px;
+	color: white;
 }
 
-.blocker-spinner,
-.blocker-spinner i {
-	color: #fff;
-	font-weight: bold;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+.blocker-overlay .blocker-spinner {
+	margin: auto;
 }
 
-.blocker-spinner i {
-	font-size: 24px;
-	vertical-align: middle;
-	margin-top: -2px;
-	margin-right: 4px;
+.blocker-overlay .blocker-spinner i {
+	font-size: 42px;
+	-webkit-animation: spin 1.05s infinite linear;
+	   -moz-animation: spin 1.05s infinite linear;
+	     -o-animation: spin 1.05s infinite linear;
+		    animation: spin 1.05s infinite linear;
 }
 
-.blocker-spinner.visible {
-	display: inline-block;
+.blocker-overlay.wait .blocker-wait {
+	display: block;
 }
 
 .spacer {
