--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -1149,6 +1149,10 @@ table.field-details .help-text hr {
 	vertical-align: top;
 }
 
+.filter-form .form-layout {
+	width: auto;
+}
+
 .record-toolbar button.update-menu-button {
 	padding: 4px;
 }
