--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -21,6 +21,7 @@
           <button class="btn" ng-disabled="!canShowAttachments()" ng-click="onShowAttachments()" ng-class="{'has-attachments': record.$attachments}">
           	<i class="fa fa-thumb-tack"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub>
           </button>
+          <button class="btn" ng-if="hasHelp()" ng-click="onShowHelp()"><i class="fa fa-info-circle"></i></button>
         </div>
         <div ui-menu-bar menus="toolmenu" handler="this"></div>
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
