--- a/axelor-core/src/main/resources/views/Meta.xml
+++ b/axelor-core/src/main/resources/views/Meta.xml
@@ -80,7 +80,7 @@
 
   <grid title="All Views" name="meta-view-grid" model="com.axelor.meta.db.MetaView" orderBy="priority,name">
     <toolbar>
-        <button name="restoreAll" title="Restore all" prompt="All the customizations will be lost. Are you sure ?" onClick="action-meta-restore-all"/>
+      <button name="restoreAll" icon="fa-undo" help="Restore all..." prompt="All the customizations will be lost. Are you sure ?" onClick="action-meta-restore-all"/>
     </toolbar>
     <field name="name"/>
     <field name="title"/>
