--- a/axelor-wkf/src/main/resources/views/Menu.xml
+++ b/axelor-wkf/src/main/resources/views/Menu.xml
@@ -6,202 +6,111 @@
 	<menuitem name="menu-wkf" priority="-99" title="Wkf Management"
 		groups="admins,workflow" icon="img/wkf.png" />
 
-	<menuitem name="menu-wkf-workflows" parent="menu-wkf" title="Workflows"
-		action="action-wkf-workflows" />
-
-	<action-view name="action-wkf-workflows" title="Worklows"
-		model="com.axelor.wkf.db.Workflow">
-		<view type="grid" name="workflow-grid" />
-		<view type="form" name="workflow-form" />
-        <context name="__check_version" expr="true"/>
-	</action-view>
-
-	<menuitem name="menu-wkf-instances" parent="menu-wkf" title="Instances"
-		action="action-wkf-instances" />
-
-	<action-view name="action-wkf-instances" title="Instances"
-		model="com.axelor.wkf.db.Instance">
-		<view type="grid" name="instance-grid" />
-		<view type="form" name="instance-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-configurations" parent="menu-wkf"
-		title="Configurations" icon="img/wrench.png" />
-
-	<menuitem name="menu-wkf-transitions" parent="menu-wkf-configurations" title="Transitions"
-		action="action-wkf-transitions" />
-
-	<action-view name="action-wkf-transitions" title="Transitions"
-		model="com.axelor.wkf.db.Transition">
-		<view type="grid" name="transition-grid" />
-		<view type="form" name="transition-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-nodes-root" parent="menu-wkf-configurations" title="Nodes" />
-
-	<menuitem name="menu-wkf-nodes-root-event" parent="menu-wkf-nodes-root" title="Events" />
-
-	<menuitem name="menu-wkf-start-event" parent="menu-wkf-nodes-root-event" title="Start events"
-		action="action-wkf-start-event" />
-
-	<action-view name="action-wkf-start-event" title="Start events"
-		model="com.axelor.wkf.db.node.StartEvent">
-		<view type="grid" name="start-event-grid" />
-		<view type="form" name="start-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-timer-event" parent="menu-wkf-nodes-root-event" title="Timer events"
-		action="action-wkf-intermediate-timer-event" />
-
-	<action-view name="action-wkf-intermediate-timer-event" title="Timer events"
-		model="com.axelor.wkf.db.node.IntermediateTimerEvent">
-		<view type="grid" name="intermediate-timer-event-grid" />
-		<view type="form" name="intermediate-timer-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-end-event" parent="menu-wkf-nodes-root-event" title="End events"
-		action="action-wkf-end-event" />
-
-	<action-view name="action-wkf-end-event" title="End events"
-		model="com.axelor.wkf.db.node.EndEvent">
-		<view type="grid" name="end-event-grid" />
-		<view type="form" name="end-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-nodes-root-message" parent="menu-wkf-nodes-root-event" title="Messages" />
-
-	<menuitem name="menu-wkf-intermediate-email-message-event" parent="menu-wkf-nodes-root-message" title="E-mail events"
-		action="action-wkf-intermediate-email-message-event" />
-
-	<action-view name="action-wkf-intermediate-email-message-event" title="E-mail events"
-		model="com.axelor.wkf.db.node.message.IntermediateEmailEvent">
-		<view type="grid" name="intermediate-email-event-grid" />
-		<view type="form" name="intermediate-email-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-mail-event" parent="menu-wkf-nodes-root-message" title="Mail events"
-		action="action-wkf-intermediate-mail-event" />
-
-	<action-view name="action-wkf-intermediate-mail-event" title="Mail events"
-		model="com.axelor.wkf.db.node.message.IntermediateMailEvent">
-		<view type="grid" name="intermediate-mail-event-grid" />
-		<view type="form" name="intermediate-mail-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-sms-event" parent="menu-wkf-nodes-root-message" title="Sms events"
-		action="action-wkf-intermediate-sms-event" />
-
-	<action-view name="action-wkf-intermediate-sms-event" title="Sms events"
-		model="com.axelor.wkf.db.node.message.IntermediateSmsEvent">
-		<view type="grid" name="intermediate-sms-event-grid" />
-		<view type="form" name="intermediate-sms-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-phone-call-event" parent="menu-wkf-nodes-root-message" title="Phone call events"
-		action="action-wkf-intermediate-phone-call-event" />
-
-	<action-view name="action-wkf-intermediate-phone-call-event" title="Phone call events"
-		model="com.axelor.wkf.db.node.message.IntermediatePhoneCallEvent">
-		<view type="grid" name="intermediate-phone-call-event-grid" />
-		<view type="form" name="intermediate-phone-call-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-internet-site-event" parent="menu-wkf-nodes-root-message" title="Internet site events"
-		action="action-wkf-intermediate-internet-site-event" />
-
-	<action-view name="action-wkf-intermediate-internet-site-event" title="Internet site events"
-		model="com.axelor.wkf.db.node.message.IntermediateInternetSiteEvent">
-		<view type="grid" name="intermediate-internet-site-event-grid" />
-		<view type="form" name="intermediate-internet-site-event-form" />
-	</action-view>
+		<menuitem name="menu-wkf-workflows" parent="menu-wkf" title="Workflows"
+			action="action-wkf-workflows" />
 	
-	<menuitem name="menu-wkf-nodes-root-social-network" parent="menu-wkf-nodes-root-event" title="Social networks" />
-
-	<menuitem name="menu-wkf-intermediate-facebook-event" parent="menu-wkf-nodes-root-social-network" title="Facebook events"
-		action="action-wkf-intermediate-facebook-event" />
-
-	<action-view name="action-wkf-intermediate-facebook-event" title="Facebook events"
-		model="com.axelor.wkf.db.node.message.socialnetwork.IntermediateFacebookEvent">
-		<view type="grid" name="intermediate-facebook-event-grid" />
-		<view type="form" name="intermediate-facebook-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-linkedin-event" parent="menu-wkf-nodes-root-social-network" title="Linkedin events"
-		action="action-wkf-intermediate-linkedin-event" />
-
-	<action-view name="action-wkf-intermediate-linkedin-event" title="Linkedin events"
-		model="com.axelor.wkf.db.node.message.socialnetwork.IntermediateLinkedinEvent">
-		<view type="grid" name="intermediate-linkedin-event-grid" />
-		<view type="form" name="intermediate-linkedin-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-intermediate-twitter-event" parent="menu-wkf-nodes-root-social-network" title="twitter events"
-		action="action-wkf-intermediate-twitter-event" />
-
-	<action-view name="action-wkf-intermediate-twitter-event" title="twitter events"
-		model="com.axelor.wkf.db.node.message.socialnetwork.IntermediateTwitterEvent">
-		<view type="grid" name="intermediate-twitter-event-grid" />
-		<view type="form" name="intermediate-twitter-event-form" />
-	</action-view>
+		<action-view name="action-wkf-workflows" title="Workflows"
+			model="com.axelor.wkf.db.Workflow">
+			<view type="grid" name="workflow-grid" />
+			<view type="form" name="workflow-form" />
+	        <context name="__check_version" expr="true"/>
+		</action-view>
 	
-	<menuitem name="menu-wkf-nodes-root-filter" parent="menu-wkf-nodes-root-event" title="Filters" />
-
-	<menuitem name="menu-wkf-filter-event" parent="menu-wkf-nodes-root-filter" title="Filters"
-		action="action-wkf-filter-event" />
-
-	<action-view name="action-wkf-filter-event" title="Filters"
-		model="com.axelor.wkf.db.node.FilterEvent">
-		<view type="grid" name="filter-event-grid" />
-		<view type="form" name="filter-event-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-stop-filter-event" parent="menu-wkf-nodes-root-filter" title="Stop filters"
-		action="action-wkf-stop-filter-event" />
-
-	<action-view name="action-wkf-stop-filter-event" title="Stop filters"
-		model="com.axelor.wkf.db.node.StopFilterEvent">
-		<view type="grid" name="stop-filter-event-grid" />
-		<view type="form" name="stop-filter-event-form" />
-	</action-view>
+		<menuitem name="menu-wkf-instances" parent="menu-wkf" title="Instances"
+			action="action-wkf-instances" />
 	
-	<menuitem name="menu-wkf-nodes-root-NodeTask" parent="menu-wkf-nodes-root" title="Activities" />
-
-	<menuitem name="menu-wkf-NodeTask" parent="menu-wkf-nodes-root-NodeTask" title="Activities"
-		action="action-wkf-NodeTask" />
-
-	<action-view name="action-wkf-NodeTask" title="Activities"
-		model="com.axelor.wkf.db.node.NodeTask">
-		<view type="grid" name="NodeTask-grid" />
-		<view type="form" name="NodeTask-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-nodes-root-gateway" parent="menu-wkf-nodes-root" title="Gateways" />
-
-	<menuitem name="menu-wkf-inclusive-gateway" parent="menu-wkf-nodes-root-gateway" title="Inclusive gateways"
-		action="action-wkf-inclusive-gateway" />
-
-	<action-view name="action-wkf-inclusive-gateway" title="Inclusive gateways"
-		model="com.axelor.wkf.db.node.gateway.InclusiveGateway">
-		<view type="grid" name="inclusive-gateway-grid" />
-		<view type="form" name="inclusive-gateway-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-parallel-gateway" parent="menu-wkf-nodes-root-gateway" title="Parallel gateways"
-		action="action-wkf-parallel-gateway" />
-
-	<action-view name="action-wkf-parallel-gateway" title="Parallel gateways"
-		model="com.axelor.wkf.db.node.gateway.ParallelGateway">
-		<view type="grid" name="parallel-gateway-grid" />
-		<view type="form" name="parallel-gateway-form" />
-	</action-view>
-
-	<menuitem name="menu-wkf-exclusive-gateway" parent="menu-wkf-nodes-root-gateway" title="Exclusive gateways"
-		action="action-wkf-exclusive-gateway" />
-
-	<action-view name="action-wkf-exclusive-gateway" title="Exclusive gateways"
-		model="com.axelor.wkf.db.node.gateway.ExclusiveGateway">
-		<view type="grid" name="exclusive-gateway-grid" />
-		<view type="form" name="exclusive-gateway-form" />
-	</action-view>
+		<action-view name="action-wkf-instances" title="Instances"
+			model="com.axelor.wkf.db.Instance">
+			<view type="grid" name="instance-grid" />
+			<view type="form" name="instance-form" />
+		</action-view>
+	
+		<menuitem name="menu-wkf-configurations" parent="menu-wkf"
+			title="Configurations" icon="img/wrench.png" />
+		
+			<menuitem name="menu-wkf-start-event" parent="menu-wkf-configurations" title="Start events"
+				action="action-wkf-start-event" />
+		
+			<action-view name="action-wkf-start-event" title="Start events"
+				model="com.axelor.wkf.db.node.StartEvent">
+				<view type="grid" name="start-event-grid" />
+				<view type="form" name="start-event-form" />
+			</action-view>
+		
+			<menuitem name="menu-wkf-transitions" parent="menu-wkf-configurations" title="Transitions"
+				action="action-wkf-transitions" />
+		
+			<action-view name="action-wkf-transitions" title="Transitions"
+				model="com.axelor.wkf.db.Transition">
+				<view type="grid" name="transition-grid" />
+				<view type="form" name="transition-form" />
+			</action-view>
+		
+			<menuitem name="menu-wkf-node-task" parent="menu-wkf-configurations" title="Activities"
+				action="action-wkf-node-task" />
+		
+			<action-view name="action-wkf-node-task" title="Activities"
+				model="com.axelor.wkf.db.node.NodeTask">
+				<view type="grid" name="node-task-grid" />
+				<view type="form" name="node-task-form" />
+			</action-view>
+		
+			<menuitem name="menu-wkf-end-event" parent="menu-wkf-configurations" title="End events"
+				action="action-wkf-end-event" />
+		
+			<action-view name="action-wkf-end-event" title="End events"
+				model="com.axelor.wkf.db.node.EndEvent">
+				<view type="grid" name="end-event-grid" />
+				<view type="form" name="end-event-form" />
+			</action-view>
+		
+			<menuitem name="menu-wkf-configurations-events" parent="menu-wkf-configurations" title="Other events" />
+		
+				<menuitem name="menu-wkf-timer-event" parent="menu-wkf-configurations-events" title="Timer events"
+					action="action-wkf-timer-event" />
+			
+				<action-view name="action-wkf-timer-event" title="Timer events"
+					model="com.axelor.wkf.db.node.TimerEvent">
+					<view type="grid" name="timer-event-grid" />
+					<view type="form" name="timer-event-form" />
+				</action-view>
+		
+				<menuitem name="menu-wkf-message-event" parent="menu-wkf-configurations-events" title="Message events"
+					action="action-wkf-message-event" />
+			
+				<action-view name="action-wkf-message-event" title="Message events"
+					model="com.axelor.wkf.db.node.MessageEvent">
+					<view type="grid" name="message-event-grid" />
+					<view type="form" name="message-event-form" />
+				</action-view>
+		
+			<menuitem name="menu-wkf-configurations-gateway" parent="menu-wkf-configurations" title="Gateways" />
+		
+				<menuitem name="menu-wkf-inclusive-gateway" parent="menu-wkf-configurations-gateway" title="Inclusive gateways"
+					action="action-wkf-inclusive-gateway" />
+			
+				<action-view name="action-wkf-inclusive-gateway" title="Inclusive gateways"
+					model="com.axelor.wkf.db.node.gateway.InclusiveGateway">
+					<view type="grid" name="inclusive-gateway-grid" />
+					<view type="form" name="inclusive-gateway-form" />
+				</action-view>
+			
+				<menuitem name="menu-wkf-parallel-gateway" parent="menu-wkf-configurations-gateway" title="Parallel gateways"
+					action="action-wkf-parallel-gateway" />
+			
+				<action-view name="action-wkf-parallel-gateway" title="Parallel gateways"
+					model="com.axelor.wkf.db.node.gateway.ParallelGateway">
+					<view type="grid" name="parallel-gateway-grid" />
+					<view type="form" name="parallel-gateway-form" />
+				</action-view>
+			
+				<menuitem name="menu-wkf-exclusive-gateway" parent="menu-wkf-configurations-gateway" title="Exclusive gateways"
+					action="action-wkf-exclusive-gateway" />
+			
+				<action-view name="action-wkf-exclusive-gateway" title="Exclusive gateways"
+					model="com.axelor.wkf.db.node.gateway.ExclusiveGateway">
+					<view type="grid" name="exclusive-gateway-grid" />
+					<view type="form" name="exclusive-gateway-form" />
+				</action-view>
 
 </object-views>
