Added missing templates for new project command.

--- a/axelor-shell/src/main/resources/templates/app/build.gradle.tmpl
+++ b/axelor-shell/src/main/resources/templates/app/build.gradle.tmpl
@@ -11,6 +11,12 @@ application {
 	// module "modules:axelor-contact"
 }
 
+license {
+	ext.product = "<%= name %>"
+	ext.owner = "My Company"
+	ext.website = "http://my-company.com"
+}
+
 tomcat {
 	httpPort = 8080
 	stopPort = 9451
