Implemented panel form.
Panel form view implements responsive form layout that
adjust according to the device screen size.

--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -47,6 +47,7 @@
 @import url('slickgrid.css');
 
 @import url('view.form.css');
+@import url('view.form.panels.css');
 @import url('view.tree.css');
 @import url('view.portal.css');
 @import url('view.calendar.css');
