Implemented panel field editor.
The field editor can be used to create complex
editor for field composed of several other fields
like 'fullName'.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -65,12 +65,35 @@ form[ui-bar-layout] {
 	margin-bottom: 0;
 }
 
+@media (max-width: 767px) {
+	.panel .row-fluid:last-child > .form-item {
+		margin-bottom: 12px;
+	}
+	.panel .row-fluid:last-child > .form-item:last-child {
+		margin-bottom: 0;
+	}
+}
+
+.panel-layout .form-item-container .panel {
+	border: none;
+	box-shadow: none;
+	margin-bottom: 0;
+}
+
+.panel-layout .form-item-container form[ui-bar-layout],
+.panel-layout .form-item-container .panel .panel-body {
+	padding: 0;
+}
+
 .panel-layout .form-item-container.readonly > a,
 .panel-layout .form-item-container.readonly > input,
 .panel-layout .form-item-container.readonly > span.display-text {
 	padding-left: 0;	
 }
 
+.panel-layout .form-item-container input {
+	min-width: inherit;
+}
 .panel-layout .form-item-container.datetime-item .picker-input {
 	width: 100%;
 }
