Added panel-tabs support.
The panel-tabs is a notebook widget that can
hold upto 8 panels.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -128,3 +128,10 @@ form[ui-bar-layout] {
 	bottom: 0px;
 	border: none;
 }
+.panel-tabs .tab-content {
+	padding-top: 4px;
+}
+
+.panel-tabs .tab-content > .panel {
+	margin-top: 0;
+}
