--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -103,6 +103,15 @@ form[ui-bar-layout] {
 	font-weight: 400;
 }
 
+.panel-layout .boolean-item label,
+.panel-layout .boolean-item input {
+	float: left;
+}
+
+.panel-layout .boolean-item input {
+	margin-top: 3px !important;
+}
+
 .panel-related .panel-header {
 	border-bottom: none;
 }
